# database/productmodel.js
@@ -1,9 +1,22 @@
 const mongoose = require('mongoose');
+const randtoken = require('rand-token');
+
 
 const productSchema = new mongoose.Schema({
-    name: String,
-    price: Number,
-    brand: String
+    appname: String,
+    appdescription: String,
+    client_id: {
+    	type: String,
+    	default: function(){
+    		return randtoken.generate(32)
+    	}
+    },
+    client_secret: {
+    	type: String,
+    	default: function(){
+    		return randtoken.generate(32)
+    	}
+    }
 },{
     timestamps: true
 });
