# database/userModel.js
@@ -1,6 +1,7 @@
 const mongoose = require('mongoose');
 
 const userSchema = new mongoose.Schema({
+	username: String,
     email: String,
     password: String
 },{
